fixed overflow on snapshot-box

--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,7 @@ div.snapshot-box {
   justify-content: center;
   align-items: center;
   background: #f0f0f0;
+  overflow: hidden;
   padding: 4rem 6rem;
 }
 
